[gd_scene load_steps=16 format=3 uid="uid://b8bmrn7mf8pn"]

[ext_resource type="Script" uid="uid://2kmlpglioqr2" path="res://Classes/test_scene.gd" id="1_hb2xm"]
[ext_resource type="PackedScene" uid="uid://bh4g6ynhg30vi" path="res://Scenes/player.tscn" id="2_50ct6"]
[ext_resource type="PackedScene" uid="uid://drfm7nh7usujm" path="res://Scenes/inventory.tscn" id="3_ak5v8"]
[ext_resource type="Script" uid="uid://dr0ud3nvcou2q" path="res://Scripts/inventory_interface.gd" id="4_ak5v8"]
[ext_resource type="Script" uid="uid://bnucw5tjhwlm1" path="res://Classes/inventory_items.gd" id="4_bwjpn"]
[ext_resource type="Script" uid="uid://fybm6c5n2tb5" path="res://Classes/slot_class.gd" id="5_ibmi3"]
[ext_resource type="PackedScene" uid="uid://dvtudpo17cbfh" path="res://Scenes/slot.tscn" id="6_x033f"]
[ext_resource type="PackedScene" uid="uid://yg83m4ywaoti" path="res://Scenes/hot_bar_inventory.tscn" id="7_d3awe"]
[ext_resource type="PackedScene" uid="uid://b6gd0gtqkj6qf" path="res://Scenes/item_vault.tscn" id="7_rdbpf"]

[sub_resource type="Environment" id="Environment_50ct6"]
background_mode = 1
background_color = Color(0.719834, 0.829238, 1, 1)
ssao_enabled = true
ssao_radius = 16.0
volumetric_fog_density = 0.0152

[sub_resource type="Resource" id="Resource_tnimv"]
resource_local_to_scene = true
script = ExtResource("4_bwjpn")
slot_datas = Array[ExtResource("5_ibmi3")]([null, null, null, null])
metadata/_custom_type_script = "uid://bnucw5tjhwlm1"

[sub_resource type="Resource" id="Resource_d3awe"]
resource_local_to_scene = true
script = ExtResource("4_bwjpn")
slot_datas = Array[ExtResource("5_ibmi3")]([null, null, null, null])
metadata/_custom_type_script = "uid://bnucw5tjhwlm1"

[sub_resource type="Resource" id="Resource_4qg1e"]
resource_local_to_scene = true
script = ExtResource("4_bwjpn")
slot_datas = Array[ExtResource("5_ibmi3")]([null, null, null, null])
metadata/_custom_type_script = "uid://bnucw5tjhwlm1"

[sub_resource type="BoxShape3D" id="BoxShape3D_yglu3"]
size = Vector3(20, 0.1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_bwjpn"]
size = Vector3(20, 0.1, 20)

[node name="TestScene" type="Node"]
script = ExtResource("1_hb2xm")

[node name="player" parent="." instance=ExtResource("2_50ct6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.866598, 0.161908)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_50ct6")

[node name="ItemVault3" parent="." instance=ExtResource("7_rdbpf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.32562, 0.2, 0.313114)
inventory_data = SubResource("Resource_tnimv")

[node name="ItemVault2" parent="." instance=ExtResource("7_rdbpf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.08972, 0.1, -4.28677)
inventory_data = SubResource("Resource_d3awe")

[node name="ItemVault" parent="." instance=ExtResource("7_rdbpf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.36561, 0.2, -8.57354)
inventory_data = SubResource("Resource_4qg1e")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HotBarInventory" parent="UI" instance=ExtResource("7_d3awe")]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.99
anchor_right = 0.5
anchor_bottom = 0.99
offset_left = -312.0
offset_top = -80.0
offset_right = 312.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ak5v8")

[node name="Inventory" parent="UI/InventoryInterface" instance=ExtResource("3_ak5v8")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("3_ak5v8")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.99
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.01
offset_left = -16.0
offset_right = 0.0
grow_horizontal = 0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("6_x033f")]
visible = false
modulate = Color(1, 1, 1, 0.211765)
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.13881, 0.990319, 0, -0.990319, 0.13881, 0, 5.6953, 0)
directional_shadow_mode = 0

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_yglu3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_bwjpn")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="drop_slot_data" from="UI/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_visibility_changed"]
